--- a/dailycode.html
+++ b/dailycode.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
+
 <html>
-<body>
-<p>Working on displaying a daily code...</p>
-</body>
+
+  <body>
+  
+    <div id="mycode"></div>
+    
+    <script type="text/javascript">
+      document.getElementById("mycode").innerHTML = "56789";
+    </script>
+    
+  </body>
+
 </html>
