--- a/dailycode.html
+++ b/dailycode.html
@@ -8,8 +8,8 @@
     
     <script type="text/javascript">
       const d = new Date();
-      let mydow = 10 * (1 + d.getDay()) + d.getDay();
-      let myday = d.getDate() + 30;
+      let mydow = 100 * (d.getDay() + 3) + (2 * (d.getMonth() + 1)) + d.getDay();
+      let myday = d.getDate() + 35;
       mycode = '' + mydow + myday;
       document.getElementById("dailycode").innerHTML = mycode;
     </script>
