--- a/dailycode.html
+++ b/dailycode.html
@@ -10,7 +10,8 @@
       const d = new Date();
       let mydow = 100 * (d.getDay() + 3) + (2 * d.getMonth()) + d.getDay();
       let myday = d.getDate() + 35;
-      mycode = '' + mydow + myday;
+      //mycode = '' + mydow + myday;
+      mycode = String(mydow).charAt(0) + String(myday).charAt(0) + String(mydow).charAt(1) + String(myday).charAt(1) + String(mydow).charAt(2);
       document.getElementById("dailycode").innerHTML = mycode;
     </script>
     
