--- a/dailycode.html
+++ b/dailycode.html
@@ -4,7 +4,7 @@
 
   <body>
   
-    <div id="dailycode"></div>
+    <div id="dailycode" style="font-size: 160px;"></div>
     
     <script type="text/javascript">
       const d = new Date();
