--- a/dailycode.html
+++ b/dailycode.html
@@ -4,7 +4,18 @@
 
   <body>
   
-    <div id="dailycode" style="font-size: 160px; font-family: LatoWeb, Lato, Helvetica, Arial, sans-serif;"></div>
+    <table style="border-collapse: collapse; width: 100%;" border="0">
+    <tbody style="width: 800px;">
+        <tr>
+            <td style="width: 50%;">
+              <span style="color: #d99191;">Today's Code:</span><br />
+              <div id="dailycode" style="font-size: 160px; font-family: LatoWeb, Lato, Helvetica, Arial, sans-serif;"></div>
+          </td>
+            <td style="width: 50%;"><img src="attendance_form_qr_code.png" /></td>
+        </tr>
+    </tbody>
+  </table>
+    
     
     <script type="text/javascript">
       const d = new Date();
