--- a/dailycode.html
+++ b/dailycode.html
@@ -2,18 +2,16 @@
 
 <html>
 
-  <body>
+  <body style="font-family: LatoWeb, Lato, Helvetica, Arial, sans-serif;">
   
-    <table style="border-collapse: collapse; width: 100%;" border="0">
-    <tbody style="width: 800px;">
+    <table style="border-collapse: collapse; width: 100%;" border="0" width="800">
         <tr>
             <td style="width: 50%;">
               <span style="color: #d99191;">Today's Code:</span><br />
-              <div id="dailycode" style="font-size: 160px; font-family: LatoWeb, Lato, Helvetica, Arial, sans-serif;"></div>
+              <div id="dailycode" style="font-size: 160px;"></div>
           </td>
             <td style="width: 50%;"><img src="attendance_form_qr_code.png" /></td>
         </tr>
-    </tbody>
   </table>
     
     
