--- a/dailycode.html
+++ b/dailycode.html
@@ -4,16 +4,7 @@
 
   <body style="font-family: LatoWeb, Lato, Helvetica, Arial, sans-serif;">
   
-    <table style="border-collapse: collapse; width: 100%;" border="0" width="800">
-        <tr>
-            <td style="width: 50%;">
-              <span style="color: #d99191;">Today's Code:</span><br />
-              <div id="dailycode" style="font-size: 160px;"></div>
-          </td>
-            <td style="width: 50%;"><img src="attendance_form_qr_code.png" /></td>
-        </tr>
-  </table>
-    
+    <div id="dailycode" style="font-size: 160px; font-family: LatoWeb, Lato, Helvetica, Arial, sans-serif;"></div>   
     
     <script type="text/javascript">
       const d = new Date();
